--- a/AWSAuthSDK/Sources/AWSAuthUI/SignIn.storyboard
+++ b/AWSAuthSDK/Sources/AWSAuthUI/SignIn.storyboard
@@ -80,7 +80,7 @@
                                 <rect key="frame" x="0.0" y="0.0" width="414" height="361.5"/>
                                 <subviews>
                                     <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="C4Q-l4-qCO">
-                                        <rect key="frame" x="145" y="54.5" width="124" height="124.5"/>
+                                        <rect key="frame" x="145" y="86.5" width="124" height="124.5"/>
                                         <constraints>
                                             <constraint firstAttribute="width" secondItem="C4Q-l4-qCO" secondAttribute="height" id="ILe-zc-7jh"/>
                                         </constraints>
@@ -88,9 +88,9 @@
                                 </subviews>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
+                                    <constraint firstAttribute="bottom" secondItem="C4Q-l4-qCO" secondAttribute="top" constant="275" id="9rk-Bo-zHE"/>
                                     <constraint firstItem="C4Q-l4-qCO" firstAttribute="centerX" secondItem="jGi-ey-N0m" secondAttribute="centerX" id="MrC-qs-aFX"/>
                                     <constraint firstItem="C4Q-l4-qCO" firstAttribute="width" secondItem="jGi-ey-N0m" secondAttribute="width" multiplier="0.3" id="qRv-ai-5aV"/>
-                                    <constraint firstItem="C4Q-l4-qCO" firstAttribute="centerY" secondItem="jGi-ey-N0m" secondAttribute="centerY" constant="-64" id="vCN-Ro-dg9"/>
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8lZ-tI-ceJ">
